# serien-and-movie-planer

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix
.github/workflows/: crawler.yaml  planer.yaml
backend/: handlers.rs  main.rs  routes.rs
crawler/: Dockerfile  entrypoint.sh  serien-and-movie-crawler.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js  navigation.js  routes.js
frontend/src/components/: BaseCard.js  ListCard.js
frontend/src/contexts/: AppBarHeight.js
frontend/src/data/: states.js
frontend/src/layouts/: dashboard.js
frontend/src/pages/: index.js
frontend/src/pages/admin/: admin.js
frontend/src/pages/editor/: editor.js
frontend/src/pages/home/: home.js
frontend/src/pages/movies/: movies.js
frontend/src/pages/serien/: serien.js
frontend/src/pages/tracker/: tracker.js
release/: docker-compose.yml
tests/: api-test.sh
tests/data/: docker-compose.yml  postgres.py
tests/remote/: docker-compose.yml
