[package]
name = "serien-and-movie-planer"
version = "0.1.0"
authors = ["root root@local"]
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
env_logger = "0.9.0"
tokio = { version = "1.9", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[dev-dependencies]
actix-rt = "2.7.0"
cargo-watch = "8.1.1"

[[bin]]
name = "serien-and-movie-planer"
path = "backend/main.rs"
